MinIO/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
      
      containers:
        - name: minio
          image: minio/minio:RELEASE.2025-09-07T16-13-09Z
          
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: ui
          
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "1"
          
          args:
            - server
            - /data
            - --console-address
            - ":9001"

          volumeMounts:
            - name: minio-storage
              mountPath: /data
