MinIO/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  labels:
    app: minio
spec:
  selector:
    app: minio
  type: LoadBalancer
  ports:
    - name: ui
      port: 9001
      targetPort: 9001
    - name: api
      port: 9000
      targetPort: 9000
